
## Process this file with automake to produce Makefile.in
##
## $Id: Makefile.am,v 1.17 2013/12/14 11:30:09 mataki Exp $
INCLUDES=-I$(top_srcdir)/include
lib_LIBRARIES = libSPTK.a
libSPTK_a_SOURCES = agexp.c \
	      cholesky.c \
	      fileio.c \
	      fillz.c \
	      getfp.c \
	      getmem.c \
	      gexp.c \
	      glog.c \
	      invert.c \
	      matrix.c \
	      movem.c \
	      mseq.c \
	      theq.c \
	      toeplitz.c

nodist_libSPTK_a_SOURCES = $(top_srcdir)/include/SPTK.h \
		$(top_srcdir)/bin/acep/_acep.c \
		$(top_srcdir)/bin/acorr/_acorr.c \
		$(top_srcdir)/bin/agcep/_agcep.c \
		$(top_srcdir)/bin/amcep/_amcep.c \
		$(top_srcdir)/bin/average/_average.c \
		$(top_srcdir)/bin/b2mc/_b2mc.c \
		$(top_srcdir)/bin/c2acr/_c2acr.c \
		$(top_srcdir)/bin/c2ir/_c2ir.c \
		$(top_srcdir)/bin/c2sp/_c2sp.c \
		$(top_srcdir)/bin/clip/_clip.c \
		$(top_srcdir)/bin/dct/_dct.c \
		$(top_srcdir)/bin/df2/_df2.c \
		$(top_srcdir)/bin/dfs/_dfs.c \
		$(top_srcdir)/bin/fft/_fft.c \
		$(top_srcdir)/bin/fft2/_fft2.c \
		$(top_srcdir)/bin/fftcep/_fftcep.c \
		$(top_srcdir)/bin/fftr/_fftr.c \
		$(top_srcdir)/bin/fftr2/_fftr2.c \
		$(top_srcdir)/bin/freqt/_freqt.c \
		$(top_srcdir)/bin/gc2gc/_gc2gc.c \
		$(top_srcdir)/bin/gcep/_gcep.c \
		$(top_srcdir)/bin/glsadf/_glsadf.c \
		$(top_srcdir)/bin/gmm/_gmm.c \
		$(top_srcdir)/bin/gnorm/_gnorm.c \
		$(top_srcdir)/bin/grpdelay/_grpdelay.c \
		$(top_srcdir)/bin/histogram/_histogram.c \
		$(top_srcdir)/bin/ifft/_ifft.c \
		$(top_srcdir)/bin/ifftr/_ifftr.c \
		$(top_srcdir)/bin/ifft2/_ifft2.c \
		$(top_srcdir)/bin/ignorm/_ignorm.c \
		$(top_srcdir)/bin/imsvq/_imsvq.c \
		$(top_srcdir)/bin/ivq/_ivq.c \
		$(top_srcdir)/bin/lbg/_lbg.c \
		$(top_srcdir)/bin/levdur/_levdur.c \
		$(top_srcdir)/bin/lmadf/_lmadf.c \
		$(top_srcdir)/bin/lpc/_lpc.c \
		$(top_srcdir)/bin/lpc2c/_lpc2c.c \
		$(top_srcdir)/bin/lpc2lsp/_lpc2lsp.c \
		$(top_srcdir)/bin/lpc2par/_lpc2par.c \
		$(top_srcdir)/bin/lsp2lpc/_lsp2lpc.c \
		$(top_srcdir)/bin/lsp2sp/_lsp2sp.c \
		$(top_srcdir)/bin/lspcheck/_lspcheck.c \
		$(top_srcdir)/bin/lspdf/_lspdf.c \
		$(top_srcdir)/bin/ltcdf/_ltcdf.c \
		$(top_srcdir)/bin/mc2b/_mc2b.c \
		$(top_srcdir)/bin/mcep/_mcep.c \
		$(top_srcdir)/bin/mfcc/_mfcc.c \
		$(top_srcdir)/bin/mgc2mgc/_mgc2mgc.c \
		$(top_srcdir)/bin/mgc2sp/_mgc2sp.c \
		$(top_srcdir)/bin/mgcep/_mgcep.c \
		$(top_srcdir)/bin/mglsadf/_mglsadf.c \
		$(top_srcdir)/bin/mlpg/_mlpg.c \
		$(top_srcdir)/bin/mlsadf/_mlsadf.c \
		$(top_srcdir)/bin/msvq/_msvq.c \
		$(top_srcdir)/bin/norm0/_norm0.c \
		$(top_srcdir)/bin/nrand/_nrand.c \
		$(top_srcdir)/bin/par2lpc/_par2lpc.c \
		$(top_srcdir)/bin/phase/_phase.c \
		$(top_srcdir)/bin/poledf/_poledf.c \
		$(top_srcdir)/bin/reverse/_reverse.c \
		$(top_srcdir)/bin/rmse/_rmse.c \
		$(top_srcdir)/bin/root_pol/_root_pol.c \
		$(top_srcdir)/bin/smcep/_smcep.c \
		$(top_srcdir)/bin/transpose/_transpose.c \
		$(top_srcdir)/bin/uels/_uels.c \
		$(top_srcdir)/bin/ulaw/_ulaw.c \
		$(top_srcdir)/bin/vc/_vc.c \
		$(top_srcdir)/bin/vq/_vq.c \
		$(top_srcdir)/bin/window/_window.c \
		$(top_srcdir)/bin/zcross/_zcross.c \
		$(top_srcdir)/bin/zerodf/_zerodf.c
